// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logout page component renders the logout page correctly with avatar using avatarurl)  1`] = `
<div
  className="logout-page"
>
  <WithStyles(ForwardRef(Paper))
    className="paper-class"
  >
    <WithStyles(ForwardRef(Avatar))
      alt="user"
      src="test_url"
    />
    <WithStyles(ForwardRef(Typography))>
      username-description
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))>
      simple/root
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))>
      logout-message
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Button))
      color="primary"
      data-testid="logout-page-button"
      onClick={[Function]}
      variant="contained"
    >
      <WithStyles(ForwardRef(Typography))
        color="inherit"
        noWrap={true}
        style={
          Object {
            "marginTop": 3,
          }
        }
      >
        logout-button
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Button))>
  </WithStyles(ForwardRef(Paper))>
</div>
`;

exports[`logout page component renders the logout page correctly with default avatar  1`] = `
<div
  className="logout-page"
>
  <WithStyles(ForwardRef(Paper))
    className="paper-class"
  >
    <WithStyles(ForwardRef(Avatar))
      className="avatar-class"
    >
      <Memo(ForwardRef(AccountCircleIcon)) />
    </WithStyles(ForwardRef(Avatar))>
    <WithStyles(ForwardRef(Typography))>
      username-description
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))>
      simple/root
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))>
      logout-message
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Button))
      color="primary"
      data-testid="logout-page-button"
      onClick={[Function]}
      variant="contained"
    >
      <WithStyles(ForwardRef(Typography))
        color="inherit"
        noWrap={true}
        style={
          Object {
            "marginTop": 3,
          }
        }
      >
        logout-button
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Button))>
  </WithStyles(ForwardRef(Paper))>
</div>
`;
